MD5Util, Base64Util

--- a/ab-common/pom.xml
+++ b/ab-common/pom.xml
@@ -15,11 +15,11 @@
     <dependencies>
 
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons.lang3.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-lang3</artifactId>-->
+            <!--<version>${commons.lang3.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>commons-codec</groupId>
@@ -54,6 +54,7 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+
 
     </dependencies>
 
