--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <fastjson.version>1.1.39</fastjson.version>
         <jackson.version>2.8.0</jackson.version>
         <http.client>1.1.39</http.client>
+        <guava.version>20.0</guava.version>
 
     </properties>
 
@@ -57,6 +58,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
 
