--- a/ab-admin/src/main/resources/log4j.properties
+++ b/ab-admin/src/main/resources/log4j.properties
@@ -23,20 +23,20 @@ log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 # %l 输出日志事件的发生位置，包括类目名、发生的线程，以及在代码中的行数。
 # %x Used to output the NDC (nested diagnostic context) associated with the thread that generated the logging event
 # %X Used to output the MDC (mapped diagnostic context) associated with the thread that generated the logging event for specified key
-log4j.appender.Console.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss.SSS} %p %t %l %m%n
+log4j.appender.Console.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss.SSS}-[%5p] [%t] (%F:%L) %m%n
 #
 # File
 #
 log4j.appender.File=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.File.File=${catalina.base}/logs/log4j.log
+log4j.appender.File.File=./logs/log4j.log
 log4j.appender.File.Encoding=UTF-8
 log4j.appender.File.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.File.Threshold=INFO
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
-log4j.appender.File.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss.SSS} %p %t %l %m%n
+log4j.appender.File.layout.ConversionPattern=[%d{YYYY-MM-dd HH:mm:ss.SSS}][%5p][%t][%l]:%m%n
 #
 # hibernate
-log4j.logger.org.hibernate=INFO,Console
+log4j.logger.org.hibernate=INFO
 log4j.logger.org.hibernate.SQL=INFO
 log4j.logger.org.hibernate.type=INFO
 log4j.logger.org.hibernate.hql.ast.AST=INFO
